--- a/styles.css
+++ b/styles.css
@@ -35,15 +35,7 @@ header {
 
 }
 
-.contact {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
-    background-color: #f7f7f7;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+
 
 h1 {
     color: #262228;
@@ -52,16 +44,36 @@ h1 {
     -webkit-text-stroke-color: #31345a; */
 }
 
-.contact {
-    text-align: center;
-}
-
 .gallery {
     column-count: 4;
     column-gap: 7px;
     max-width: 1400px;
     margin: 0 auto;
     padding: 20px 10px;
+}
+
+@media (min-width: 1200px) {
+    .gallery {
+        column-count: 4;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .gallery {
+        column-count: 3;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .gallery {
+        column-count: 2;
+    }
+}
+
+@media (max-width: 767px) {
+    .gallery {
+        column-count: 1;
+    }
 }
 
 .gallery a {
@@ -79,10 +91,22 @@ h1 {
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
 }
 
+.contact {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    padding: 15px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 30px auto;
+}
+
 .main {
     color: 	#262228;
     text-decoration: none;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 .main:hover {
